--- a/loadbalancer/config.json
+++ b/loadbalancer/config.json
@@ -7,10 +7,11 @@
     }
   ],
   "security": {
-    "ddos_threshold": 10000,
-    "dos_threshold": 1000,
+    "ddos_threshold": 1000,
+    "dos_threshold": 100,
     "ban_duration": "5m",
     "window_size": "1m",
+    "max_tracked_ips": 1000,
     "js_challenge_secret": "challenge-secret-key-2025",
     "geo_blocking": {
       "enabled": true,
